# cpp-ipc

./: CMakeLists.txt
demo/send_recv/: CMakeLists.txt  main.cpp
